Update mgp to v0.0.25 and refactor Swagger documentation
