# docs/swagger.yaml
@@ -1,6 +1,12 @@
 definitions:
-  mgp.PaginateInfo:
+  mgp.PaginateData-array_model_Audit:
     properties:
+      items:
+        items:
+          items:
+            $ref: '#/definitions/model.Audit'
+          type: array
+        type: array
       page:
         type: integer
       page_size:
@@ -8,28 +14,14 @@ definitions:
       total:
         type: integer
     type: object
-  mgp.Result-array_string:
-    properties:
-      code:
-        description: 状态码
-        type: integer
-      data:
-        description: 返回数据/错误详细信息
-        items:
-          type: string
-        type: array
-      msg:
-        description: 请求结果
-        type: string
-    type: object
-  mgp.Result-mgp_ResultPaginateData-array_model_Audit:
+  mgp.Result-mgp_PaginateData-array_model_Audit:
     properties:
       code:
         description: 状态码
         type: integer
       data:
         allOf:
-        - $ref: '#/definitions/mgp.ResultPaginateData-array_model_Audit'
+        - $ref: '#/definitions/mgp.PaginateData-array_model_Audit'
         description: 返回数据/错误详细信息
       msg:
         description: 请求结果
@@ -47,30 +39,6 @@ definitions:
       msg:
         description: 请求结果
         type: string
-    type: object
-  mgp.Result-string:
-    properties:
-      code:
-        description: 状态码
-        type: integer
-      data:
-        description: 返回数据/错误详细信息
-        type: string
-      msg:
-        description: 请求结果
-        type: string
-    type: object
-  mgp.ResultPaginateData-array_model_Audit:
-    properties:
-      items:
-        description: 数据详情列表
-        items:
-          $ref: '#/definitions/model.Audit'
-        type: array
-      paginate:
-        allOf:
-        - $ref: '#/definitions/mgp.PaginateInfo'
-        description: 分页信息
     type: object
   model.Audit:
     properties:
@@ -158,7 +126,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/mgp.Result-mgp_ResultPaginateData-array_model_Audit'
+            $ref: '#/definitions/mgp.Result-mgp_PaginateData-array_model_Audit'
       security:
       - ApiKeyAuth: []
       summary: 分页获取审计记录
@@ -183,39 +151,6 @@ paths:
       summary: 获取指定ID的审计记录
       tags:
       - 审计记录
-  /api/user:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/mgp.Result-string'
-      security:
-      - ApiKeyAuth: []
-      summary: 获取用户信息
-      tags:
-      - 用户
-  /api/user/{auth_type}:
-    get:
-      parameters:
-      - in: path
-        name: auth_type
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/mgp.Result-array_string'
-      security:
-      - ApiKeyAuth: []
-      summary: 获取用户权限列表
-      tags:
-      - 用户
 schemes:
 - https
 - http
