# internal/controller/api/audit.go
@@ -4,7 +4,6 @@ import (
 	"mgp_example/internal/service"
 	"mgp_example/internal/store/model"
 	"mgp_example/internal/type/request"
-	"net/http"
 
 	"github.com/tiancheng92/mgp"
 )
@@ -15,21 +14,15 @@ type auditController struct {
 
 func NewAuditRouter(group *mgp.RouterGroup) {
 	c := &auditController{newReadOnlyGenericController[model.Audit](service.NewAuditService())}
-	g := group.Group("audit").SetTagsForSwagger("审计记录")
+	g := group.Group("audit").SwaggerTags("审计记录")
 	{
 		g.GET(":pk", c.Get).
-			SetSummaryForSwagger("获取指定ID的审计记录").
-			SetPathForSwagger(new(request.PrimaryKey)).
-			SetReturnsForSwagger(&mgp.ReturnType{
-				StatusCode: http.StatusOK,
-				Body:       new(mgp.Result[model.Audit]),
-			})
+			SwaggerSummary("获取指定ID的审计记录").
+			SwaggerPath(new(request.PrimaryKey)).
+			SwaggerReturns(mgp.RT[model.Audit]())
 		g.GET("", c.List).
-			SetSummaryForSwagger("分页获取审计记录").
-			SetQueryForSwagger(new(mgp.PaginateQuery)).
-			SetReturnsForSwagger(&mgp.ReturnType{
-				StatusCode: http.StatusOK,
-				Body:       new(mgp.Result[mgp.ResultPaginateData[[]model.Audit]]),
-			})
+			SwaggerSummary("分页获取审计记录").
+			SwaggerQuery(new(mgp.PaginateQuery)).
+			SwaggerReturns(mgp.PRT[model.Audit]())
 	}
 }
